# finbot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy-webapp.yml
docs/: FUTURE_FEATURES.md  USER_ACTIONS.md  decisions.md  design.md
src/finbot/: __init__.py  __main__.py  config.py
src/finbot/agent/: __init__.py  llm_client.py  orchestrator.py  prompts.py  state.py
src/finbot/bot/: __init__.py  formatters.py  handlers.py  keyboards.py  middleware.py  tunnel.py  webapp_api.py
src/finbot/db/: __init__.py  session.py
src/finbot/db/migrations/: env.py
src/finbot/db/migrations/versions/: 001_initial_schema.py  002_failure_log.py  003_category_aliases.py
src/finbot/ledger/: __init__.py  balance.py  models.py  repository.py  validation.py
src/finbot/reprocessing/: __init__.py
src/finbot/tools/: __init__.py  categories.py  expenses.py  queries.py  registry.py  settlements.py
tests/test_agent/: test_llm_client.py  test_orchestrator.py  test_state.py
tests/test_bot/: test_handlers.py  test_middleware.py
tests/test_ledger/: test_balance.py  test_repository.py  test_validation.py
tests/test_tools/: test_expenses.py  test_queries.py  test_registry.py  test_settlements.py
webapp/: index.html
