[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "finbot"
version = "0.1.0"
description = "Natural Language Shared Finance Agent via Telegram"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "aiogram>=3.13,<4",
    "ollama>=0.4,<1",
    "anthropic>=0.40,<1",
    "openai>=1.50,<2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
